Fixed Safari CSS-column alignment and improvements to Skills section

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -1,4 +1,3 @@
 html {
-  position: relative;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
