--- a/src/scss/layout/about.scss
+++ b/src/scss/layout/about.scss
@@ -24,14 +24,23 @@
       column-count: 3;
     }
   }
+
+  @include for-tablet-portrait-up() {
+    &-item-wrapper {
+      &::after {
+        background: transparent;
+        content: "";
+        display: block;
+        height: 40px;
+      }
+    }
+  }
   &-item {
     background: #fff;
     border-radius: 2px;
     text-align: center;
     break-inside: avoid;
     padding-top: 16px;
-    -webkit-margin-before: 0;
-    -webkit-margin-after: 0;
 
     @include for-phone-only() {
       margin-left: 8px;
@@ -55,7 +64,7 @@
     list-style: none;
     padding: 0;
     padding-bottom: 40px;
-    margin: 24px 0 40px;
+    margin: 24px 0 0;
 
     @include for-phone-only() {
       margin-bottom: 8px;
